--- a/src/app/weather/current-weather/current-weather.component.html
+++ b/src/app/weather/current-weather/current-weather.component.html
@@ -8,7 +8,7 @@
 
 <div class="row">
   <div class="col-xs-4">
-    {{weather.currently.summary}}
+    {{forecast.currently.summary}}
   </div>
   <div class="col-xs-8">
 
