--- a/src/app/current/current.component.html
+++ b/src/app/current/current.component.html
@@ -1,3 +1,68 @@
-<p>
-  current works!
-</p>
+<div class="row">
+  <div class="col-xs-8 text-left">
+    <h4>{{convertedDate  | date:'EEEE, dd MMMM yyyy'}}</h4>
+  </div>
+  <div class="col-xs-4 text-right">
+    <h4> {{convertedDate | date:'HH:mm'}}</h4>
+  </div>
+</div>
+<br>
+<div class="row">
+  <h1>
+    <canvas id="icon1" width="128" height="128"></canvas>
+    <span [ngClass]="{hidden: current.scale === 'C'}">{{fahrenheitTemperature}}&#176;F </span>
+    <span [ngClass]="{hidden: current.scale === 'F'}">{{celsiusTemperature}}&#176;C </span>
+    <span>{{current.currently.summary}}</span>
+  </h1>
+  <h3>{{current.hourlySummary}}</h3>
+</div>
+<br>
+
+<div class="row">
+</div>
+
+<div class="row">
+  <div class="col-xs-12">
+    <div class="text-left">
+      <p [ngClass]="{hidden: current.scale === 'C'}">Feels like: {{fahrenheitFeelsLikeTemperature}}&#176;F</p>
+      <p [ngClass]="{hidden: current.scale === 'F'}">Feels like: {{celsiusFeelsLikeTemperature}}&#176;C</p>
+
+      <p>Wind: {{current.currently.windSpeed}} mph &nbsp;<span id="direction" style="display: inline-block;">↑</span></p>
+
+
+
+      <!--<label class="fahrenheit">Temperature {{current.temperature}}&#176;F</label>
+      <p class="celsius">Temperature {{current.temperature}}&#176;C</p>-->
+      <!--<p [ngClass]="{hidden: scale === 'C'}">Temperature {{current.temperature}} &#176;F</p>
+      <p [ngClass]="{hidden: scale === 'F'}">Temperature {{celsiusTemperature}} &#176;C</p>-->
+      <!--<p>sunriseTime {{current.sunriseTime}}</p>
+      -->
+      <p>precipProbability {{current.currently.precipProbability}}</p>
+      <p>humidity {{current.currently.humidity}}</p>
+      <p>windSpeed {{current.currently.windSpeed}}</p>
+      <p>windBearing {{current.currently.windBearing}}</p>
+    </div>
+  </div>
+
+</div>
+
+<!--
+  time: number;
+  summary: string;
+  icon: string;
+  sunriseTime?:number;
+  sunsetTime?:number;
+  moonPhase?:number;
+  precipIntensity?: number;
+  precipProbability?: number;
+  temperatureMin?: number;
+  temperatureMax?: number;
+  temperature?: number;
+  apparentTemperature?: number;
+  dewPoint?: number;
+  humidity?: number;
+  windSpeed?: number;
+  windBearing?: number;
+  cloudCover?: number;
+  pressure?: number;
+  ozone?: number;-->
