--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,5 @@
 <app-nav [scale]="scale" (scaleChanged)="handleScaleChanged($event)"></app-nav>
-
-<div class="row">
-
-</div>
-
-<div class="row">
-
-</div>
-
-<app-current [current]="current" class="col-xs-12"></app-current>
-<app-hourly class="col-xs-12"></app-hourly>
-<app-weekly></app-weekly>
+<app-current [current]="current"></app-current>
+<app-daily [daily]="daily"></app-daily>
+<app-hourly [hourly]="hourly"></app-hourly>
+<app-webapi></app-webapi>
