--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,21 +1,8 @@
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-inverse pull-right">
   <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">Cape Town Weather</a>
-    </div>
-    <!--<ul class="nav navbar-nav pull-right">
-      <li class="active"><a href="#">Home</a></li>
-      <li><a href="#">Page 1</a></li>
-      <li><a href="#">Page 2</a></li>
-      <li><a href="#">Page 3</a></li>
-    </ul>
-    [(ngModel)]="scale"
-    -->
-    <div class="collapse navbar-collapse radio pull-right">
+    <div class="navbar-header radio">
       <label class="radio-inline"><input type="radio" [(ngModel)]="scale" name="radio-scale" value="F" [checked]="scale === 'F'" (change)="changeScale()">&#176;F</label>
       <label class="radio-inline"><input type="radio" [(ngModel)]="scale" name="radio-scale" value="C" [checked]="scale === 'C'" (change)="changeScale()">&#176;C</label>
     </div>
   </div>
 </nav>
-
-
