--- a/src/app/webapi/webapi.component.html
+++ b/src/app/webapi/webapi.component.html
@@ -1,3 +1,3 @@
-<div class="container-webapi">
-  Powered by DarkSky
+<div class="container-webapi text-right">
+  <a href="https://darksky.net/poweredby/" target="_blank">Powered by Dark Sky</a>
 </div>
