Rename webapi component to footer Implement interval subscription for weather service Catch exceptions and retry on timer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,7 @@
   <app-current [current]="current"></app-current>
   <app-daily [daily]="daily"></app-daily>
   <app-hourly [hourly]="hourly"></app-hourly>
-  <app-hourly [hourly]="hourly"></app-hourly>
-  <app-webapi></app-webapi>
+  <app-footer></app-footer>
 </div>
 <div *ngIf="loading === true">
   <app-loading></app-loading>
