--- a/src/app/current/current.component.html
+++ b/src/app/current/current.component.html
@@ -1,3 +1,5 @@
+<h1 class="component-title">CAPE TOWN.</h1>
+
 <div class="row">
   <div class="col-xs-3 text-left">
     <div class="left-panel-component">
