--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,3 @@
-<div class="container-webapi text-right">
+<div class="container-footer text-right">
   <a href="https://darksky.net/poweredby/" target="_blank">Powered by Dark Sky</a>
 </div>
