--- a/src/app/current/current.component.html
+++ b/src/app/current/current.component.html
@@ -1,4 +1,4 @@
-<h1 class="component-title">CAPE TOWN.</h1>
+<h1 class="component-title">CAPE TOWN.   <button [ngStyle]="{'visibility': current.visibilityRefreshButton}"  id="button-refresh" class="btn btn-danger pull-right" (click)=handleRefreshClick()>Refresh Now</button></h1>
 
 <div class="row">
   <div class="col-xs-3 text-left">
