Coding complete, all components implemented.

--- a/src/app/loading/loading.component.html
+++ b/src/app/loading/loading.component.html
@@ -1,5 +1,4 @@
 <div id="container-loader">
-  <div id="loader-canvas">
-  </div>
-  <span> Loading... </span>
+  <div id="loader-canvas">  </div>
+  <span class="pull-left"> Loading... </span>
 </div>
