Fix all TSLint issues

--- a/src/app/current/current.component.html
+++ b/src/app/current/current.component.html
@@ -13,7 +13,7 @@
   </div>
   <div class="col-xs-8">
     <h1>
-      <canvas id="icon1" width="128" height="128">{{current.data.icon}}</canvas>
+      <canvas id="weather-icon" width="128" height="128">{{current.data.icon}}</canvas>
       <span>{{current.data.temperature | temperatureConverter:current.scale}}&#176;{{current.scale}} </span>
       <span>{{current.data.summary}}</span>
     </h1>
